# AI-data

DE_crawl/: Dockerfile  docker-compose.yml  pyproject.toml
DE_crawl/code/: imgtable.py  reviewtable.py  testsql.py  transimg.py
DE_crawl/mysqldata/conf.d/: my.cnf
DE_crawl/mysqldata/mysql-init/: init.sql
classification/: cnn_classification.ipynb
gan/: GAN.ipynb
image/classification/: linear_knn_classification.ipynb
recommendataion/: collaborative_.ipynb  collaborative_item.ipynb  content_recommendation.ipynb  popularity_recommendation_system.ipynb  user_based_collaborative_filtering.ipynb
