[tool.poetry]
name = "de-crawl"
version = "0.1.0"
description = ""
authors = ["jiin <vhzkfl123@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.26.1"
pymysql = "^1.1.1"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
